# Matrinator

./: CMakeLists.txt  README.md  main.cpp  matrix.hpp
